feet:terminado  el capitulo 1

--- a/1.introduccion/indext.html
+++ b/1.introduccion/indext.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <script src=".comentarios.js"></script>
-    <script src="consola.js"></script>
+    <script src="./comentarios.js"></script>
+    <script src="./consola.js"></script>
     <script>
-        console.log("hola mundo soy indebido")
-    </script>
-    <script>
-        console.time("time")
-        let i=0
-        for(i;i<=100;i++){
-            console.log(i)
+        /*console.time("tiempo")
+        for(let i=0;i<=100;i++){
+            console.log(1)
         }
-        console.timeEnd("tiempo")
+        console.timeEnd("tiempo")*/
     </script>
 </body>
 </html>
