--- a/2.valores_operadores/index.html
+++ b/2.valores_operadores/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Capitulo 2</h1>
-    <script src="./valores.js"></script>
+    <!-- <script src="./operadores.js"></script> -->
+    <script src="./ejercicios.js"></script>
 </body>
 </html>
