--- a/2.valores_operadores/index.html
+++ b/2.valores_operadores/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Capitulo 2</h1>
     <!-- <script src="./operadores.js"></script> -->
-    <script src="./ejercicios.js"></script>
+    <!-- <script src="./ejercicios.js"></script> -->
+    <script src="./cadenas.js"></script>
 </body>
 </html>
