feet:valores booleanos
operadores logicos y de comparacion

--- a/2.valores_operadores/index.html
+++ b/2.valores_operadores/index.html
@@ -9,6 +9,8 @@
     <h1>Capitulo 2</h1>
     <!-- <script src="./operadores.js"></script> -->
     <!-- <script src="./ejercicios.js"></script> -->
-    <script src="./cadenas.js"></script>
+    <!-- <script src="./cadenas.js"></script> -->
+    <!-- <script src="./opUnario.js"></script> -->
+     <script src="./booleanos.js"></script>
 </body>
 </html>
