--- a/2.valores_operadores/index.html
+++ b/2.valores_operadores/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Capitulo 2</h1>
     <!-- <script src="./operadores.js"></script> -->
-    <!-- <script src="./ejercicios.js"></script> -->
+    <script src="./ejercicios.js"></script>
     <!-- <script src="./cadenas.js"></script> -->
     <!-- <script src="./opUnario.js"></script> -->
-     <script src="./booleanos.js"></script>
+     <!-- <script src="./booleanos.js"></script> -->
 </body>
 </html>
