--- a/3.estructura_del_programa/index.html
+++ b/3.estructura_del_programa/index.html
@@ -7,6 +7,8 @@
 <body>
     <h1>capitulo 3</h1>
     <h2>estructura de un programa</h2>
-    <script src="alertas.js"></script>
+    <!-- <script src="./alertas.js"></script> -->
+    <!-- <script src="./repaso.js"></script> -->
+    <script src="./entorno.js"></script>
 </body>
 </html>
