--- a/3.estructura_del_programa/index.html
+++ b/3.estructura_del_programa/index.html
@@ -9,6 +9,7 @@
     <h2>estructura de un programa</h2>
     <!-- <script src="./alertas.js"></script> -->
     <!-- <script src="./repaso.js"></script> -->
-    <script src="./entorno.js"></script>
+    <!-- <script src="./entorno.js"></script> -->
+    <script src="./condiciones.js"></script>
 </body>
 </html>
