feet: clase de blucles

--- a/3.estructura_del_programa/index.html
+++ b/3.estructura_del_programa/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="./alertas.js"></script> -->
     <!-- <script src="./repaso.js"></script> -->
     <!-- <script src="./entorno.js"></script> -->
-    <script src="./condiciones.js"></script>
+    <!-- <script src="./condiciones.js"></script> -->
+    <script src="./bucles.js"></script>
 </body>
 </html>
