--- a/4.funciones/index.html
+++ b/4.funciones/index.html
@@ -6,7 +6,7 @@
     <title>funciones</title>
 </head>
 <body>
-    <!-- <script src="./funciones.js"></script> -->
-    <script src="./ejercicios.js"></script>
+    <script src="./funciones.js"></script>
+    <!-- <script src="./ejercicios.js"></script> -->
 </body>
 </html>
