feat: tarea de ejercicio final de funciones
tarea de diseñar una clase para mi entidad celular

--- a/4.funciones/index.html
+++ b/4.funciones/index.html
@@ -6,7 +6,8 @@
     <title>funciones</title>
 </head>
 <body>
-    <script src="./funciones.js"></script>
+    <!-- <script src="./funciones.js"></script> -->
     <!-- <script src="./ejercicios.js"></script> -->
+    <script src="./clases.js"></script>
 </body>
 </html>
