--- a/6.DOM/index.html
+++ b/6.DOM/index.html
@@ -6,6 +6,8 @@
     <title>DOM</title>
 </head>
 <body>
+     <!-- <p id="uno">primer texto</p>
+    <p id="dos">segundo texto</p> -->
     <script src="./dom.js"></script>
   
 </body>
